# skillsheet_builder

./: .coverage  .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  test_main.py
.github/workflows/: ci.yml
static/css/: preview.css  style.css
static/js/: index.js  index.ts  preview.js  preview.ts  skillsheet.js  skillsheet.ts
templates/: index.html  preview.html  skillsheet.html
プロジェクト資料/: CI_CDに関するメモ.md  企画書.md  基本設計書.md  要件定義書.md
